# SeqEngine

./: README.md  pyproject.toml  requirements.txt  seqengine.py
src/seqengine/: __init__.py  __main__.py
