[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "seqengine"
version = "1.0.1"
description = "Automated feature engineering and selection pipeline for protein and DNA sequences"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Love Kaushik", email = "lovekaushik271@gmail.com"}
]
maintainers = [
    {name = "Love Kaushik", email = "lovekaushik271@gmail.com"}
]
keywords = [
    "bioinformatics",
    "feature extraction",
    "feature selection",
    "protein",
    "DNA",
    "machine learning",
    "sequence analysis"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scipy>=1.7.0",
    "scikit-learn>=1.0.0",
    "biopython>=1.79",
    "tqdm>=4.62.0"
]

[project.urls]
"Homepage" = "https://github.com/lovekaushik899/seqengine"
"Bug Reports" = "https://github.com/lovekaushik899/seqengine/issues"
"Source" = "https://github.com/lovekaushik899/seqengine"
"Documentation" = "https://github.com/lovekaushik899/seqengine#readme"

[project.scripts]
seqengine = "seqengine:main"

[tool.setuptools]
py-modules = ["seqengine"]
